--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,11 @@ h1, h2, h3, h4, p {
     display: grid;
     place-items: center;
     font-family: boldMono;
+    overflow-y: scroll;
+}
+.splitter {
+    letter-spacing: 1rem;
+    color: var(--Dark-grayish-cyan);
 }
 
 .mainContainer {
@@ -38,6 +43,8 @@ h1, h2, h3, h4, p {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .container {
@@ -160,4 +167,40 @@ h1, h2, h3, h4, p {
 .totalCostPerson {
     font-size: 3rem;
     color: var(--Strong-cyan)
+}
+@media only screen and (max-width: 700px) {
+    .mainContainer {
+        border-radius: 40px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        gap: 10px
+    }
+    .container {
+        width: 100%;
+        height: 35rem
+    }
+    .container.right {
+        height: auto;
+        justify-content: space-around;
+        min-height: 20rem
+    }
+    .total.tip {
+        display: flex;
+        justify-content: space-around;
+        margin: 0;
+        height: 15rem
+    }
+    .resetButton {
+        margin: 0
+    }
+    .tipOptions {
+        grid-template-columns: 1fr 1fr;
+        width: 100%;
+    }
+    .billInput {
+        padding: 10px
+    }
 }
