feat(restButton): Adds the reset button for setting all the fields back to their default

--- a/public/style.css
+++ b/public/style.css
@@ -219,6 +219,15 @@ input[type=number] {
     font-size: 3rem;
     color: var(--Strong-cyan)
 }
+
+button:disabled {
+    opacity: .4;
+
+}
+button:disabled:hover {
+    cursor: not-allowed;
+}
+
 @media only screen and (max-width: 700px) {
     .mainContainer {
         border-radius: 40px;
